# rush.vk

./: .clangd  .env.windows.example.cmake  .gitignore  .gitmodules  BUILD_NOTES.txt  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  build.sh  compile_commands.json  unixBuild.sh
.cache/clangd/index/: VmaUsage.cpp.B3C6E905CEC78FCA.idx  VmaUsage.h.A306D7F66A6E0A2C.idx  _fixes.hpp.72B80C57716F931E.idx  _noise.hpp.E9027C67243D367E.idx  _vectorize.hpp.32EF83A736FD46A6.idx  adl_pointer.hpp.F9F2342712585F95.idx  algorithm.hpp.0ED06783FC1DF222.idx  android-ndk-r17.hpp.F397134DAF5CF103.idx  ansicolor_sink-inl.h.9F96B311F9EA928C.idx  ansicolor_sink.h.488784DCAE847C5D.idx  any.hpp.E2E7510BFFA3F681.idx  app.cpp.9030EE399A1F3292.idx  app.hpp.6254F0A7B34F36E9.idx  async.cpp.9D64C4FB6B810F90.idx  async.h.8C8530F9081BEEB3.idx  async_logger-inl.h.480960B4A0DCFCE2.idx  async_logger.h.89A6B186CB5B4120.idx  attribute.h.7EEE298F4CA04286.idx  backtracer-inl.h.4A3D97199A44C117.idx  backtracer.h.5974A62ED456744E.idx  base_sink-inl.h.DC93824F86CD76C1.idx  base_sink.h.AFE4941BEE684950.idx  basic_file_sink-inl.h.9D251EF6839431B9.idx  basic_file_sink.h.A931507E72B21272.idx  bitfield.hpp.0EFE851AE1D2B9B2.idx  bitfield.inl.B578CA28B26D8D31.idx  cache.hpp.E1DD458DC0BC203E.idx  cfg.cpp.CBE98856A22E9BD3.idx  circular_q.h.F9738324908A3F8E.idx  color_sinks.cpp.068308EA3849FB43.idx  color_space.hpp.9100DDEDEB8886C6.idx  color_space.inl.CE1767FF9D310289.idx  common-inl.h.4C01B86DCC992DD1.idx  common.h.4FEA4076227B5F46.idx  common.hpp.3B001F9FD1F3D1D6.idx  component.hpp.3661891FF4116726.idx  component_wise.hpp.44A10E8B8A5BB18B.idx  component_wise.inl.B4F0ECB77C93016E.idx  compressed_pair.hpp.8E2DEB5ADF1B4592.idx  compute_common.hpp.654882BC70971647.idx  (+469 more)
.github/: README.md
.github/actions/setup-vulkan-sdk/: action.yml
.github/workflows/: build-all.yml  build-linux.yml  build-mac.yml  build-windows.yml  combined.yml  merge.yml  pull.yml  testing.yml  vulkan-test.yml
assets/: README.md
cmake/modules/: FindGLSLang.cmake  FindShaderc.cmake
src/: app.cpp  app.hpp  first_app.cpp  first_app.hpp  keyboard_movement_controller.cpp  keyboard_movement_controller.hpp  lve_buffer.cpp  lve_buffer.hpp  lve_descriptors.cpp  lve_descriptors.hpp  lve_device.cpp  lve_device.hpp  lve_frame_info.hpp  lve_game_object.cpp  lve_game_object.hpp  lve_model.cpp  lve_model.hpp  lve_pipeline.cpp  lve_pipeline.hpp  lve_renderer.cpp  lve_renderer.hpp  lve_swap_chain.cpp  lve_swap_chain.hpp  lve_window.cpp  lve_window.hpp  main.cpp  plans.md  rush_pch.hpp  utils.hpp  volk_app.cpp  volk_app.hpp  volk_camera.cpp  volk_camera.hpp  volk_frame_info.hpp  volk_game_object.cpp  volk_game_object.hpp
src/ECS/: scene.cpp  scene.hpp
src/ECS/components/: relationship.hpp  transform.cpp  transform.hpp
src/assets/: model.cpp
src/backends/vulkan/: core.cpp  core.hpp  device.cpp  device.hpp  extensions.cpp  extensions.hpp  instance.cpp  instance.hpp  physical_device.cpp  physical_device.hpp  pipeline.cpp  pipeline.hpp  queue.hpp  shader.cpp  shader.hpp  swapchain.cpp  swapchain.hpp  vk_util.cpp  vk_util.hpp  vkextensions.cpp  vkextensions.hpp  vkinstance.cpp  vkinstance.hpp
src/components/: transform.cpp  transform.hpp
src/core/: core.cpp  core.hpp  device.cpp  device.hpp  extensions.cpp  extensions.hpp  rush_pipeline.cpp  rush_pipeline.hpp  scene.cpp  scene.hpp  util.hpp
src/models/: model.hpp
src/systems/: point_light_system.cpp  point_light_system.hpp  simple_render_system.cpp  simple_render_system.hpp
src/util/: util.hpp
src/window/: window.cpp  window.hpp
